--- a/_events/2012xmas.md
+++ b/_events/2012xmas.md
@@ -14,7 +14,7 @@ sales_end_time: 2021-01-13T20:00:00+09
 
 ## Event Details
 
-Lifewonders is launching their first christmas event, together with the event a new gacha summon is also released which include Nessen (Hero and Sidekick), 
+Lifewonders is launching their first christmas event in Live A Hero, together with the event a new gacha summon is also released which include Nessen (Hero and Sidekick), 
 "Drunken Tiger" Ryekie (hero) and Subaru (Hero and Sidekick), in which both Nessen and Ryekie variant is limited to this event banner.
 
 Maintenance is planned to commence on 23 Dec 2020 from 14:00-20:00 JST
