--- a/_events/2012xmas.md
+++ b/_events/2012xmas.md
@@ -14,13 +14,42 @@ sales_end_time: 2021-01-6T20:00:00+09
 
 ## Event Details
 
-Lifewonders is launching their first christmas event in Live A Hero, together with the event a new gacha summon is also released which include Nessen (Hero and Sidekick), 
-"Drunken Tiger" Ryekie (hero) and Subaru (Hero and Sidekick), in which both Nessen and Ryekie variant is limited to this event banner.
+Lifewonders is launching their first christmas event in Live A Hero, together with the event a new gacha summon is also released which include {% chara_link Nessen %} (Hero and Sidekick), 
+"Drunken Tiger" {% chara_link Ryekie %} (hero) and {% chara_link Subaru %} (Hero and Sidekick), in which both Nessen and Ryekie variant is limited to this event banner.
 
-Maintenance is planned to commence on 23 Dec 2020 from 14:00-20:00 JST
+### Free Quest Bonus
 
-Quests, battles, etc. that are still being played at the start of the maintenance may not be able to be resumed even after the maintenance is complete. 
-Please finish playing by the start time.
+| Hero | +Bonus (%)|
+|------------|--------------|
+| "Drunken Tiger" {% chara_link Ryekie %} | 40 |
+| {% chara_link Nessen %}  | 40 |
+| {% chara_link Subaru %}  | 30 |
+| {% chara_link Ryekie %} | 20 |
+| {% chara_link Akashi %}  | 10 |
+| {% chara_link Mokdai %} | 10 | 
+
+
+| Sidekick | +Bonus (%) |
+|-------------|---------------|
+| {% chara_link Ryekie %} | 10 | 
+| {% chara_link Nessen %}  | 10 | 
+| {% chara_link Subaru %}  | 10 | 
+| {% chara_link Akashi %} | 10 | 
+| {% chara_link Mokdai %} | 10 | 
+| {% chara_link Player %} | 10 | 
+
+### Event Sales Bonus
+
+Event sales bonus added according to how much event Hero you have in a single sales, Which is
+"Drunken Tiger"{% chara_link Ryekie %}, {% chara_link Nessen %} and {% chara_link Subaru %}  
+
+Here is the bonus for each hero:
+| Hero | +Bonus (%) |
+|---------|------------------|
+| 1 Hero | 10 |
+| 2 Hero | 30 |
+| 3 Hero | 50 |
+
 
 ## Event Shop
 
