--- a/_events/2012xmas.md
+++ b/_events/2012xmas.md
@@ -43,13 +43,13 @@ Lifewonders is launching their first christmas event in Live A Hero, together wi
 Event sales bonus added according to how much event Hero you have in a single sales, Which is
 "Drunken Tiger"{% chara_link Ryekie %}, {% chara_link Nessen %} and {% chara_link Subaru %}  
 
-Here is the bonus for each hero:
+Here is the bonus:
 
 | Hero   | +Bonus(%) |
 |--------|-----------|
-| 1 Hero |     10    |
-| 2 Hero |     30    |
-| 3 Hero |     50    |
+| 1 Event Hero   |     10    |
+| 2 Event Heroes |     30    |
+| 3 Event Heroes |     50    |
 
 ### Limited Time Mission
 
