--- a/_events/2012xmas.md
+++ b/_events/2012xmas.md
@@ -89,6 +89,11 @@ Here is a list of this event's limited time Missions:
 </p>
 </details>
 
+<details><summary>Sales Report 1 (Translated)</summary>
+<p> <code>character0</code> and <code>character1</code> have finished their work in the hot spring area. There was still a little time, so they decided to go home after taking a bath.<br><br> <code>character1</code> says that if he encounters a fan of his in this state, he won't be able to take it easy bebecause he's a mess after the hero live.<br> <code>character0</code> agreed and arranged a private bath, but due to circumstances only one bath is available and the two are forced to choose between bathing together or taking turns. <code>character0</code> was worried, but suggested that <code>character1</code> enter with him since wasn't much time left before the last train.<br><br>However, while taking a bath, <code>character0</code> can't relax because he doesn't know where to let his eyes rest.<br>Although he made the suggestions to <code>character1</code> ,he cannot help but fret about sharing the bath like this.<br><br>In the end, as a result of each other being too conscious of each other, they were overwhelmed and missed the train.
+</p>
+</details>
+
 <details><summary>Sales Report 2</summary>
 <p>夜分遅くに仕事を終えた <code>character0</code> と <code>character1</code> 。<br>クリスマスムードの漂う街も、すっかり
 人の波が落ち着き、<br>イルミネーションと雪が幻想的な風景をつくり出している。<br><br>駐車場の前で、 <code>character1</code> がふと立ち止まる。<br>どうしたのかと声をかける <code>character0</code> 。<br><br>振り向いた <code>character1</code>
