--- a/_events/2012xmas.md
+++ b/_events/2012xmas.md
@@ -15,23 +15,23 @@ sales_end_time: 2021-01-6T20:00:00+09
 ## Event Details
 
 Lifewonders is launching their first christmas event in Live A Hero, together with the event a new gacha summon is also released which include {% chara_link Nessen %} (Hero and Sidekick), 
-"Drunken Tiger" {% chara_link Ryekie %} (hero) and {% chara_link Subaru %} (Hero and Sidekick), in which both Nessen and Ryekie variant is limited to this event banner.
+{% chara_link Ryekie|h2 %} (hero) and {% chara_link Subaru %} (Hero and Sidekick), in which both Nessen and Ryekie variant is limited to this event banner.
 
 ### Free Quest Bonus
 
 | Hero | +Bonus (%)|
 |------------|--------------|
-| "Drunken Tiger" {% chara_link Ryekie %} | 40 |
+| {% chara_link Ryekie|h2 %} | 40 |
 | {% chara_link Nessen %}  | 40 |
 | {% chara_link Subaru %}  | 30 |
-| {% chara_link Ryekie %} | 20 |
+| {% chara_link Ryekie|h1 %} | 20 |
 | {% chara_link Akashi %}  | 10 |
 | {% chara_link Mokdai %} | 10 | 
 
 
 | Sidekick | +Bonus (%) |
 |-------------|---------------|
-| {% chara_link Ryekie %} | 10 | 
+| {% chara_link Ryekie|s1 %} | 10 | 
 | {% chara_link Nessen %}  | 10 | 
 | {% chara_link Subaru %}  | 10 | 
 | {% chara_link Akashi %} | 10 | 
@@ -41,7 +41,7 @@ Lifewonders is launching their first christmas event in Live A Hero, together wi
 ### Event Sales Bonus
 
 Event sales bonus added according to how much event Hero you have in a single sales, Which is
-"Drunken Tiger"{% chara_link Ryekie %}, {% chara_link Nessen %} and {% chara_link Subaru %}  
+{% chara_link Ryekie|h2 %}, {% chara_link Nessen %} and {% chara_link Subaru %}  
 
 Here is the bonus:
 
