Convert some links to hero

--- a/_events/2012xmas.md
+++ b/_events/2012xmas.md
@@ -22,11 +22,11 @@ Lifewonders is launching their first christmas event in Live A Hero, together wi
 | Hero | +Bonus (%)|
 |------------|--------------|
 | {% chara_link Ryekie|h2 %} | 40 |
-| {% chara_link Nessen %}  | 40 |
-| {% chara_link Subaru %}  | 30 |
+| {% chara_link Nessen|h1 %}  | 40 |
+| {% chara_link Subaru|h1 %}  | 30 |
 | {% chara_link Ryekie|h1 %} | 20 |
-| {% chara_link Akashi %}  | 10 |
-| {% chara_link Mokdai %} | 10 | 
+| {% chara_link Akashi|h1 %}  | 10 |
+| {% chara_link Mokdai|h1 %} | 10 | 
 
 
 | Sidekick | +Bonus (%) |
@@ -41,7 +41,7 @@ Lifewonders is launching their first christmas event in Live A Hero, together wi
 ### Event Sales Bonus
 
 Event sales bonus added according to how much event Hero you have in a single sales, Which is
-{% chara_link Ryekie|h2 %}, {% chara_link Nessen %} and {% chara_link Subaru %}  
+{% chara_link Ryekie|h2 %}, {% chara_link Nessen|h1 %} and {% chara_link Subaru|h1 %}  
 
 Here is the bonus:
 
