--- a/_events/2012xmas.md
+++ b/_events/2012xmas.md
@@ -102,6 +102,11 @@ Here is a list of this event's limited time Missions:
 </p>
 </details>
 
+<details><summary>Sales Report 2 (Translated)</summary>
+<p> <code>character0</code> and <code>character1</code> finished their work late at night.<br>The city's christmas mood has calmed down,<br>The snow and illumination work together to create an illusion like scenery.<br><br>In front of the parking lot, <code>character1</code> suddenly halts.<br>What's the matter? Say  <code>character0</code> .<br><br> <code>character1</code> turned around and in their hands there is a small package.<br>They have prepared a present because it's christmas.<br> <code>character1</code> says so while being embarassed,<br> <code>character0</code> couldn't help but burst out laughing.<br><br>Accepting the present, <code>character0</code> says honest words of gratitude.<br> <code>character1</code> too happily answer it.<br>Now, what should I do in return…<br> <code>character0</code> ponders this question while on their way back.<br><br>Later on, the return present has been given,<br>As to what present it was, it will be kept under wraps.
+</p>
+</details>
+
 <details><summary>Sales Report 3</summary>
 <p>仕事後、打ち上げ兼忘年会と称して、<br>その日のメンバーで宴会が催された。<br><br>盛り上がってきたとやけにはしゃぐ <code>character0</code> 。<br>介護するかの如くそれを宥める <code>character1</code> 。<br><br>悪酔いしたかのように管を巻く <code>character2</code> 。<br>適当に相槌を打ち、油を注ぐ <code>character3</code> 。<br><br>ただでさえ収集が付かなくなって きたのに、<br>勢いで脱ぎはじめる <code>character2</code> 。<br>ほぼシラフだった <code>character1</code> だけでなく、<br> <code>character0</code> や <code>character3</code> も流石に驚き、<br> <code>character2</code> を何とかして落ち着かせ、 服を着せた。<br><br>翌日、何があったのかを聞いて、<br>赤面して黙り込む <code>character2</code> 。<br>何とかフォローしよ うとする <code>character3</code> 。<br>もはやフォローを放棄している <code>character0</code> 。<br><br>当分このメンバーでの宴会は控えようと、<br>心に決めた <code>character1</code> であった。
 </p>
