--- a/_events/2012xmas.md
+++ b/_events/2012xmas.md
@@ -112,6 +112,11 @@ Here is a list of this event's limited time Missions:
 </p>
 </details>
 
+<details><summary>Sales Report 3 (Translated)</summary>
+<p> After work, it was decided that a year end party will be held,<br>the banquet was participated by the members of that day.<br><br>The over excited and in high spirits <code>character0</code> .<br>Caring and pacifying <code>character1</code> .<br><br>The very drunk and blabbering <code>character2</code> .<br>Listening and encouraging <code>character3</code> .<br><br>Things are getting out of hand, <br> <code>character2</code> started to undress.<br>Not only <code>character1</code> who is almost sober,<br> but also <code>character0</code> and <code>character3</code> ,<br>all of them are surprised by the turn of events,<br>and urge <code>character2</code> to calm down and put back their clothes.<br><br>The next day, when asked what had happened.<br> <code>character2</code> blushed and fell silent.<br> <code>character3</code> still tries to ask about it.<br>While <code>character0</code> no longer ask about the matter.<br><br><code>character1</code> secretly decided to never have another party with these members in the future.
+</p>
+</details>
+
 <details><summary>Sales Report 4</summary>
 <p>仕事後、温泉宿に宿泊することになった。<br>日頃の疲れがたまっているのか、 <code>character0</code> は<br>風呂から帰ってくると、すぐに寝始める。<br><br>日頃何をされているのか分からないが、<br> <code>character0</code> への悪戯を企てる <code>character1</code> 。<br> <code>character2</code> は制しようとするが、 <code>character3</code> まで何故か<br>ノリノリで、悪戯は決行されてしまう。<br><br>翌日、目を覚ますと顔に落書きされている<br>ことに気付き、さすがに怒る <code>character0</code> 。<br> <code>character2</code> は問いただされ、実行犯を白状。<br>気持ちよさそうに眠っていた <code>character1</code> と <code>character3</code> は<br>すぐさま叩き起こされ、制裁が加えられた。<br><br>その後、朝風呂に入ろうと風呂に向かった<br> <code>character0</code> は、服を脱いだ時に、<br>あらぬ場所にまで落書きされていることに気付く。<br><br> <code>character1</code> と <code>character3</code> に更なる制裁が加えられたのは、<br>いうまでも無いことだろう。
 </p>
