--- a/_events/2012xmas.md
+++ b/_events/2012xmas.md
@@ -113,7 +113,7 @@ Here is a list of this event's limited time Missions:
 </details>
 
 <details><summary>Sales Report 3 (Translated)</summary>
-<p> After work, it was decided that a year end party will be held,<br>the banquet was participated by the members of that day.<br><br>The over excited and in high spirits <code>character0</code> .<br>Caring and pacifying <code>character1</code> .<br><br>The very drunk and blabbering <code>character2</code> .<br>Listening and encouraging <code>character3</code> .<br><br>Things are getting out of hand, <br> <code>character2</code> started to undress.<br>Not only <code>character1</code> who is almost sober,<br> but also <code>character0</code> and <code>character3</code> ,<br>all of them are surprised by the turn of events,<br>and urge <code>character2</code> to calm down and put back their clothes.<br><br>The next day, when asked what had happened.<br> <code>character2</code> blushed and fell silent.<br> <code>character3</code> still tries to ask about it.<br>While <code>character0</code> no longer ask about the matter.<br><br><code>character1</code> secretly decided to never have another party with these members in the future.
+<p> After work, it was decided that a year end party will be held,<br>the participants of the banquet was the members who are present that day.<br><br>The over excited and in high spirits <code>character0</code> .<br>Caring and pacifying <code>character1</code> .<br><br>The very drunk and blabbering <code>character2</code> .<br>Listening and encouraging <code>character3</code> .<br><br>Things are getting out of hand, <br> <code>character2</code> started to undress.<br>Not only <code>character1</code> who is almost sober,<br> but also <code>character0</code> and <code>character3</code> ,<br>all of them are surprised by the turn of events,<br>and urge <code>character2</code> to calm down and put back their clothes.<br><br>The next day, when asked what had happened.<br> <code>character2</code> blushed and fell silent.<br> <code>character3</code> still tries to ask about it.<br>While <code>character0</code> no longer ask about the matter.<br><br><code>character1</code> secretly decided to never have another party with these members in the future.
 </p>
 </details>
 
