--- a/_events/2012xmas.md
+++ b/_events/2012xmas.md
@@ -121,3 +121,8 @@ Here is a list of this event's limited time Missions:
 <p>仕事後、温泉宿に宿泊することになった。<br>日頃の疲れがたまっているのか、 <code>character0</code> は<br>風呂から帰ってくると、すぐに寝始める。<br><br>日頃何をされているのか分からないが、<br> <code>character0</code> への悪戯を企てる <code>character1</code> 。<br> <code>character2</code> は制しようとするが、 <code>character3</code> まで何故か<br>ノリノリで、悪戯は決行されてしまう。<br><br>翌日、目を覚ますと顔に落書きされている<br>ことに気付き、さすがに怒る <code>character0</code> 。<br> <code>character2</code> は問いただされ、実行犯を白状。<br>気持ちよさそうに眠っていた <code>character1</code> と <code>character3</code> は<br>すぐさま叩き起こされ、制裁が加えられた。<br><br>その後、朝風呂に入ろうと風呂に向かった<br> <code>character0</code> は、服を脱いだ時に、<br>あらぬ場所にまで落書きされていることに気付く。<br><br> <code>character1</code> と <code>character3</code> に更なる制裁が加えられたのは、<br>いうまでも無いことだろう。
 </p>
 </details>
+
+<details><summary>Sales Report 4 (Translated)</summary>
+<p>After work, it was decided that they will stay at an onsen hotel.<br>Maybe because they've accumulated tiredness from  usual daily work, <br> <code>character0</code> after returning from bath soon started to sleep.<br><br>It was unknown what is <code>character0</code> 's usual daily work but,<br><code>character1</code> is plotting to prank them.<br> <code>character2</code> is holding them back, but even <code>character3</code> wanted to participate, and so they started the prank.<br><br>The next day, <code>character0</code> woke up and realized that their face has been scribbled, of course they got angry.<br>After being inquired <code>character2</code> confess to them about the perpretrators.<br> <code>character1</code> and <code>character3</code> ,who are sleeping soundly, immediately got hit and punished on spot.<br><br>Afterwards, when trying to take a morning bath <code>character0</code> realized that their whole body have been scribbled,<br> there are even scribbles on unexpected place.<br><br>It goes without saying that <code>character1</code> and <code>character3</code> will further get their just desserts.
+</p>
+</details>
