--- a/_events/2112xmas.md
+++ b/_events/2112xmas.md
@@ -12,6 +12,8 @@ sales_start_time: 2021-12-28T20:00:00+09
 sales_end_time: 2022-01-18T20:00:00+09
 ---
 
+> The first episode of this event will be available on 2021-12-24, while the rest (episode, gacha, sales, etc) coming on 2021-12-28 after maintenance.
+
 ## Event Preview
 
 Orient City is recovering from the damage caused by the kaibutsu. 
