--- a/_events/2112xmas.md
+++ b/_events/2112xmas.md
@@ -32,6 +32,12 @@ In order to learn more about his background, you decided to visit a hero-fanboy 
 
 Will the heroes be able to defeat the giant meteorite closing in on them every second? Will a peaceful christmas come to the heroes!?
 
+## Quest Details
+
+### Main Quests
+
+{% include quest-group.html chapterId=445 %}
+
 ## Maintenance Notice
 
 Maintenance is scheduled to start at 2012-12-28 14:00-20:00 JST
