--- a/_events/2112xmas.md
+++ b/_events/2112xmas.md
@@ -32,11 +32,19 @@ In order to learn more about his background, you decided to visit a hero-fanboy 
 
 Will the heroes be able to defeat the giant meteorite closing in on them every second? Will a peaceful christmas come to the heroes!?
 
+## Event Shop
+
+{% include shop-table.html id=17 %}
+
 ## Quest Details
 
 ### Main Quests
 
 {% include quest-group.html chapterId=445 %}
+
+### Free Quests
+
+{% include quest-group.html chapterId=446 %}
 
 ## Maintenance Notice
 
