--- a/_events/2112xmas.md
+++ b/_events/2112xmas.md
@@ -12,8 +12,6 @@ sales_start_time: 2021-12-29T20:00:00+09
 sales_end_time: 2022-01-18T20:00:00+09
 ---
 
-> The first episode of this event will be available on 2021-12-24, while the rest (episode, gacha, sales, etc) coming on 2021-12-29 after maintenance.
-
 ## Event Preview
 
 Orient City is recovering from the damage caused by the kaibutsu. 
@@ -106,6 +104,17 @@ Here is the bonus:
 | 3 Event Heroes |     50    |
 
 ### Limited Time Mission
+
+Here is a list of this event's limited time Missions:
+
+| No  | Description      | Rewards      |
+|----|-----------------------------------------------------------|----------------|
+| 1  | Finish any rank event quest 10 times | 1 {% include item-icon.html id=34 %}    |
+| 2  | Finish any rank event quest 20 times | 1 {% include item-icon.html id=34 %}    |
+| 3  | Finish any rank event quest 30 times | 1 {% include item-icon.html id=34 %}    |
+| 4  | Finish any rank event quest 40 times | 1 {% include item-icon.html id=34 %}    |
+| 5  | Finish any rank event quest 50 times | 1 {% include item-icon.html id=34 %}    |
+| 6  | Finish event sales 10 times | 1 {% include item-icon.html id=34 %}    |
 
 
 ## Event Shop
