--- a/_events/2112xmas.md
+++ b/_events/2112xmas.md
@@ -80,6 +80,7 @@ Here is a list of heroes and sidekicks which grants bonus in this event:
 | {% chara_link Narihito %}  | 10 | 
 | {% chara_link Sadayoshi %}  | 10 | 
 | {% chara_link Huckle %}  | 10 | 
+| {% chara_link Exio %}  | 10 | 
 | {% chara_link Crowne %}  | 10 | 
 | {% chara_link Nessen %}  | 10 | 
 | {% chara_link Subaru %}  | 10 | 
