--- a/_events/2112xmas.md
+++ b/_events/2112xmas.md
@@ -203,21 +203,16 @@ Here is a list of score attack quest rewards based on the score:
 ## Sales Report
 
 <details><summary>Sales Report 1</summary>
-<p>温泉地での仕事を終えた <code>character0</code> と <code>character1</code> 。<br>折角なので、ひと風呂浴びてから帰る事 にした。<br><br>ヒーローライブ直後ゆえに、ヒーローファンと遭遇すると、<br>のんびり入っていられないだろうと言う <code>character1</code> 。<br> <code>character0</code> も同調し、貸切風呂を手配したが、<br>当たり前のことながら、一緒に入るか<br>順番に入るかの２択を迫られる。<br><br> <code>character0</code> は悩んだが、 <code>character1</code> はあっさりと<br>一緒に入る事を提案。帰りの電車までさほど時間も無いため、 <code>character0</code> は承諾した。<br><br>しかし入浴中、どうして も目のやり場に困って<br>ゆっくりできない <code>character0</code> 。<br> <code>character1</code> も、自分から提案はしたものの、湯に浸かる <code>character0</code> が気になってしょうがない。<br><br>結局、お互いがお互いを意識し過ぎた結果、<br> のぼせてしまい、電車を逃した。
+<p>クリスマスも近づいたある日。<br> <code>character0</code> は仕事帰りに裏路地で<br>右足に怪我をした青年を見つけた。<br><br>慌てて応急手当をする <code>character0</code> 。<br>素早く適切な処置のお陰で、<br>青年の怪我は大事に至らずに済んだ。<br><br>大事な仕事の前で、大怪我になっていたら<br>その仕事も出来なくなっていたと、<br> <code>character0</code> に何度も礼を言う青年。<br><br>青年を笑顔で見送り、<br>そのまま帰路についた <code>character0</code> 。<br><br>翌日、目を覚ますと枕 元には<br>誰かからのクリスマスプレゼントが。<br><br>その日、空を駆けるサンタのソリと、右足に包帯を巻いたトナカイの<br>目撃ニュースが流れたという。<br>
 </p>
 </details>
 
 <details><summary>Sales Report 2</summary>
-<p>夜分遅くに仕事を終えた <code>character0</code> と <code>character1</code> 。<br>クリスマスムードの漂う街も、すっかり 人の波が落ち着き、<br>イルミネーションと雪が幻想的な風景をつくり出している。<br><br>駐車場の前で、 <code>character1</code> がふと立ち止まる。<br>どうしたのかと声をかける <code>character0</code> 。<br><br>振り向いた <code>character1</code>  の手には、小さな包み。<br>クリスマスだから、とプレゼントを用意してきたという。<br>何だか照れ臭そうな <code>character1</code> の様子に、<br> <code>character0</code> は思わず吹き出してしまう。<br><br>プレゼントを受け取り、素直な感謝の言葉を<br>伝える <code>character0</code> 。 <code>character1</code> も嬉しそうに返答する。<br>さて、お返しはどうしようか……と、<br> <code>character0</code> は思案しながら、帰路についた。<br><br>後日、しっかりとお返しのプレゼントは贈ったが、<br>内容 については伏せておくこととする。
+<p>クリスマスショーの仕事で呼ばれた<br> <code>character0</code> と <code>character1</code> 。<br>サンタのコスチュームが 用意され、<br>それを着て、ショーを盛り上げる２人だが、<br> <code>character0</code> が違和感に気付く。<br><br>どうやら激 しく動き過ぎたようで、<br> <code>character0</code> の衣装の一部が<br>派手に破れてしまっていた。<br><br>ステージ上で慌て る <code>character0</code> 。<br>それを察した <code>character1</code> は、<br>自分が羽織っていたローブを、自然に<br> <code>character0</code> へと羽織らせる。<br><br> <code>character1</code> のアドリブが功を奏し、<br> <code>character0</code> も顔を赤くしながらも<br>上手く立て直し、拍手喝采で幕引きとなった。<br><br> <code>character0</code> は <code>character1</code> に<br>お礼のクリスマスプレゼントを贈ったらしい。<br>
 </p>
 </details>
 
 <details><summary>Sales Report 3</summary>
-<p>仕事後、打ち上げ兼忘年会と称して、<br>その日のメンバーで宴会が催された。<br><br>盛り上がってきたとやけにはしゃぐ <code>character0</code> 。<br>介護するかの如くそれを宥める <code>character1</code> 。<br><br>悪酔いしたかのように管を巻く <code>character2</code> 。<br>適当に相槌を打ち、油を注ぐ <code>character3</code> 。<br><br>ただでさえ収集が付かなくなって きたのに、<br>勢いで脱ぎはじめる <code>character2</code> 。<br>ほぼシラフだった <code>character1</code> だけでなく、<br> <code>character0</code> や <code>character3</code> も流石に驚き、<br> <code>character2</code> を何とかして落ち着かせ、 服を着せた。<br><br>翌日、何があったのかを聞いて、<br>赤面して黙り込む <code>character2</code> 。<br>何とかフォローしよ うとする <code>character3</code> 。<br>もはやフォローを放棄している <code>character0</code> 。<br><br>当分このメンバーでの宴会は控えようと、<br>心に決めた <code>character1</code> であった。
-</p>
-</details>
-
-<details><summary>Sales Report 4</summary>
-<p>仕事後、温泉宿に宿泊することになった。<br>日頃の疲れがたまっているのか、 <code>character0</code> は<br>風呂から帰ってくると、すぐに寝始める。<br><br>日頃何をされているのか分からないが、<br> <code>character0</code> への悪戯を企てる <code>character1</code> 。<br> <code>character2</code> は制しようとするが、 <code>character3</code> まで何故か<br>ノリノリで、悪戯は決行されてしまう。<br><br>翌日、目を覚ますと顔に落書きされている<br>ことに気付き、さすがに怒る <code>character0</code> 。<br> <code>character2</code> は問いただされ、実行犯を白状。<br>気持ちよさそうに眠っていた <code>character1</code> と <code>character3</code> は<br>すぐさま叩き起こされ、制裁が加えられた。<br><br>その後、朝風呂に入ろうと風呂に向かった<br> <code>character0</code> は、服を脱いだ時に、<br>あらぬ場所にまで落書きされていることに気付く。<br><br> <code>character1</code> と <code>character3</code> に更なる制裁が加えられたのは、<br>いうまでも無いことだろう。
+<p>クリスマスショーの後に貰った<br>子供からのファンレターに返事を書く<br> <code>character0</code> と <code>character1</code> 。<br><br>「サンタさんは本当は居るのですか？」と<br>返答に困った <code>character0</code> は<br> <code>character1</code> に相談するも悩む２人。<br><br>そこを通り掛かった <code>character2</code> は、<br>正直に答える方が良いだろうと話す。<br><br>その時、 <code>character3</code> が皆を呼んだ。<br>その手にはプレゼントの箱があり、<br>サンタからの差し入れだと 笑う。<br><br>箱の中身はクリスマスケーキだった。<br>４人はそのケーキを囲んで談笑する。<br><br>「自分の元にも素敵なサンタが来てくれたので<br>きっと君の元にも来てくれますよ」と<br>ファンレターの返事を書きながら。<br>
 </p>
 </details>
