--- a/_events/2112xmas.md
+++ b/_events/2112xmas.md
@@ -208,7 +208,7 @@ Here is a list of score attack quest rewards based on the score:
 </details>
 
 <details><summary>Sales Report 1 (Translated)</summary>
-<p> On a certain day when christmas was approaching.<br>Going home through a back alley <code>character0</code> saw a young man with an injured right leg.<br><br>In a panic, <code>character0</code> tried to give first aid.<br>Thanks to the swift and proper measure,the man's injuries doesn't end up being serious.<br><br>The young man thanks <code>character0</code> profusely, because it's before an important job and if he has a serious injury he won't be able to do it.<br><br>Sending off the young man with a smile, <code>character0</code> continue to go back.<br><br>The next day, when opening their eyes, there is a christmas present from someone at their bedside.<br><br>On that day, there was a news report of a sighting of Santa's sleigh in the sky and the reindeer has a bandage on its right leg.
+<p> On a certain day when christmas was approaching.<br>Going home through a back alley <code>character0</code> saw a young man with an injured right leg.<br><br>In a panic, <code>character0</code> tried to give first aid.<br>Thanks to the swift and proper measure,the man's injuries doesn't end up being serious.<br><br>The young man thanks <code>character0</code> profusely, because it's before an important job and if he has a serious injury he won't be able to do it.<br><br>Sending off the young man with a smile, <code>character0</code> continue to go back.<br><br>The next day, when opening their eyes, there was a christmas present from someone at their bedside.<br><br>On that day, there was a news report of a sighting of Santa's sleigh in the sky and the reindeer has a bandage on its right leg.
 </p>
 </details>
 
@@ -219,7 +219,7 @@ Here is a list of score attack quest rewards based on the score:
 </details>
 
 <details><summary>Sales Report 2 (Translated)</summary>
-<p> <code>character0</code> and <code>character1</code> are called for work in a hero show.<br>Wearing the prepared santa costume, the two of them work to bring the show to it's climax, but <code>character0</code> notice an uncomfortable feeling.<br><br>Turns out <code>character0</code> moved too hard, a part of their outfit was torn flashily.<br><br> <code>character0</code> began to panic upstage.<br>Guessing what happened, <code>character1</code> in a natural motion put on their robe over to <code>character0</code> .<br><br> <code>character1</code> 's adlib was successful, With a red face <code>character0</code> also continue on, together they receive the audience's applause.<br><br>Later, <code>character0</code> gave <code>character1</code> a christmas present as thanks.
+<p> <code>character0</code> and <code>character1</code> were called for work in a hero show.<br>Wearing the prepared santa costume, the two of them work to bring the show to it's climax, but <code>character0</code> notice an uncomfortable feeling.<br><br>Turns out <code>character0</code> moved too hard, a part of their outfit was torn flashily.<br><br> <code>character0</code> began to panic upstage.<br>Guessing what happened, <code>character1</code> in a natural motion put on their robe over to <code>character0</code> .<br><br> <code>character1</code> 's adlib was successful, With a red face <code>character0</code> also continue on, together they receive the audience's applause.<br><br>Later, <code>character0</code> gave <code>character1</code> a christmas present as thanks.
 </p>
 </details>
 
