--- a/_events/2112xmas.md
+++ b/_events/2112xmas.md
@@ -200,6 +200,10 @@ Here is a list of score attack quest rewards based on the score:
 
 {% include quest-group.html chapterId=446 %}
 
+### Special Quests
+
+{% include quest-group.html chapterId=448 %}
+
 ## Sales Report
 
 <details><summary>Sales Report 1</summary>
