--- a/_events/2112xmas.md
+++ b/_events/2112xmas.md
@@ -202,6 +202,8 @@ Here is a list of score attack quest rewards based on the score:
 
 ### Special Quests
 
+Fan translations for special quests can be found [here](https://docs.google.com/spreadsheets/d/e/2PACX-1vSPYWBybG-1maSl3K1tM3NQflpjfSyy1Tk8LwxtdpplFZ8RwMtXU5xjVJM5Rnoa6dpif2-9LxRRT4SB/pubhtml)
+
 {% include quest-group.html chapterId=448 %}
 
 ## Sales Report
