--- a/_events/2112xmas.md
+++ b/_events/2112xmas.md
@@ -110,12 +110,12 @@ Here is a list of this event's limited time Missions:
 
 | No  | Description      | Rewards      |
 |----|-----------------------------------------------------------|----------------|
-| 1  | Finish any rank event quest 10 times | 1 {% include item-icon.html id=34 %}    |
-| 2  | Finish any rank event quest 20 times | 1 {% include item-icon.html id=34 %}    |
-| 3  | Finish any rank event quest 30 times | 1 {% include item-icon.html id=34 %}    |
-| 4  | Finish any rank event quest 40 times | 1 {% include item-icon.html id=34 %}    |
-| 5  | Finish any rank event quest 50 times | 1 {% include item-icon.html id=34 %}    |
-| 6  | Finish event sales 10 times | 1 {% include item-icon.html id=34 %}    |
+| 1  | Finish any rank event quest 10 times | 1 {% include item.html id=34 %}    |
+| 2  | Finish any rank event quest 20 times | 1 {% include item.html id=34 %}    |
+| 3  | Finish any rank event quest 30 times | 1 {% include item.html id=34 %}    |
+| 4  | Finish any rank event quest 40 times | 1 {% include item.html id=34 %}    |
+| 5  | Finish any rank event quest 50 times | 1 {% include item.html id=34 %}    |
+| 6  | Finish event sales 10 times | 1 {% include item.html id=34 %}    |
 
 ### Score Attack Quests
 
