Adding event ids

--- a/_events/2112xmas.md
+++ b/_events/2112xmas.md
@@ -1,5 +1,6 @@
 ---
 title: Melody Meteorite Christmas
+eventId: 25
 jp_title: 旋律のメテオライト･クリスマス
 news_link: https://live-a-hero.jp/info/3153
 banner_image: banner_info_Xmas2112.jpg 
