--- a/_events/2012xmas.md
+++ b/_events/2012xmas.md
@@ -1,5 +1,6 @@
 ---
 title: Paradise! Hot Water Battlefield on Holy Night
+eventId: 5
 jp_title: 極楽！聖夜の熱湯戦線
 news_link: https://live-a-hero.jp/info/1098
 banner_image: banner_info_Xmas2012.jpg
